@@ -63,6 +63,9 @@ PostGIS 3.0.0
   - #4276, ST_AsGeoJSON documentation refresh (Darafei Praliaskouski)
   - #4292, ST_AsMVT: parse JSON numeric values with decimals as doubles (Raúl Marín)
   - #4300, ST_AsMVTGeom: Always return the simplest geometry (Raúl Marín)
+  - #4301, ST_Subdivide: fix endless loop on coordinates near coincident to bounds
+           (Darafei Praliaskouski)
+
 
 PostGIS 2.5.0
 2018/09/23
